# famemu

./: .gitignore  CMakeLists.txt  README.ja.md  README.md
.github/workflows/: ci.yml  pages.yml
brand/: LOGO_BRIEF.md  README.md  preview.html
docs/: BUG_JOURNAL.md  DISTRIBUTION.md  NIGHTLOG.md  PLATFORM.md
docs/audits/: 2026-07-13-famitv-review.md  2026-07-13-famitv-review.raw.json
docs/engines/: API.md  DEVELOPER_GUIDE.md  EMBER16.md  EMBER32.md  EMBER32_SCOPE.md  EMBER8.md  HERITAGE.md  README.md  STORE_POLICY.md
engines/ember32/: README.md  audio.hpp  bus.hpp  compositor.hpp  compositor_fast.hpp  cpu_arm7.hpp  ember32.hpp  famemu_ember32_core.cpp  rf_composite.hpp  run_tests.sh
engines/ember32/tools/: audio_bringup.cpp  audio_dsp_test.cpp  bringup.cpp  cart_bringup.cpp  cart_file_test.cpp  cpu_bringup.cpp  exception_test.cpp  facade_test.cpp  fastcore_test.cpp  make_cart.cpp  quad_bringup.cpp  raster_bringup.cpp  test_features.cpp  thumb_test.cpp
engines/include/: famemu_core.h
engines/nes/: apu.cpp  apu.hpp  cart.hpp  cpu.cpp  cpu.hpp  famemu_nes_core.cpp  palette.hpp  ppu.cpp  ppu.hpp  state.hpp  system.hpp
engines/nes/tests/: blargg_main.cpp  compare_frames.py  nestest_main.cpp  rom_fuzz.cpp  state_fuzz.cpp  state_test.cpp
engines/nes/tools/: famemu_dump.cpp
engines/snes/: cpu65816.cpp  cpu65816.hpp  cx4.hpp  dsp1.hpp  dsp2.hpp  famemu_snes_core.cpp  sa1.hpp  sa1_impl.hpp  sdd1.hpp  sdsp.cpp  sdsp.hpp  snes_system.hpp  snes_system_impl.hpp  spc700.cpp  spc700.hpp  spc7110.hpp  spc7110_decomp.hpp  sppu.cpp  sppu.hpp  st010.hpp  superfx.hpp  superfx_impl.hpp
engines/snes/tests/: cx4_oob_test.cpp  sa1_mmio_fuzz.cpp  snes_cpu_fuzz.cpp  snes_golden_test.cpp  snes_smoke_test.cpp  snes_spc7110_test.cpp  snes_state_fuzz.cpp  snes_state_test.cpp  verify_features.sh
engines/snes/tests/data/: golden_screens.txt
engines/snes/tests/features/: build.sh  dsp1.s  dsp2.s  featppu.s  hires.s  hirom.s  hirom64.cfg  raster.s  sa1.s  sa1rom.cfg  sfx.s  sfxrom.cfg  sprlimit.s
engines/snes/tests/hdma/: hdma.s  lorom32.cfg
engines/snes/tests/mode7/: build.sh  mode7.s
engines/snes/tests/tools/: spc7110_ref.md
engines/snes/tools/: snes_dump.cpp
scripts/: famitv.sh
site/: CNAME  README.md  index.html  state.html  style.css
src/: config.hpp  main.cpp
src/dsp/: crt.hpp  fm_audio.hpp  nes_signal.hpp  ntsc_decoder.cpp  ntsc_decoder.hpp  ntsc_modulator.hpp
src/ui/: sdl_audio.hpp  sdl_display.cpp  sdl_display.hpp
src/util/: bmp.hpp
tools/: famitv_loopback.cpp  famitv_play.cpp
